# equilibria

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  deploy.sh  pyproject.toml
app/: cli.py  config.py  db.py  main.py
app/ai/: brain.py  citations.py  tools.py
app/api/: aging_economics.py  agricultural.py  agricultural_finance.py  agricultural_policy.py  ai_economics.py  arts_economics.py  behavioral.py  behavioral_finance.py  bioeconomy.py  briefings.py  capital_markets.py  chat.py  circular_economy.py  climate_finance.py  commodity_economics.py  competition.py  complexity.py  conflict_economics.py  criminal_justice_economics.py  crosscutting.py  cultural.py  defense_economics.py  demographic.py  demographic_transition.py  development.py  digital_economy.py  digital_finance.py  disability_economics.py  disaster_economics.py  education_economics.py  energy.py  energy_security.py  entrepreneurship.py  environmental.py  environmental_accounting.py  external_debt.py  financial.py  financial_crisis.py  financial_regulation.py  fiscal_policy.py  (+68 more)
app/briefings/: agricultural_outlook.py  base.py  country_deep_dive.py  development_tracker.py  economic_conditions.py  labor_pulse.py  policy_alert.py  trade_flash.py
app/collectors/: base.py  bls.py  comtrade.py  faostat.py  fred.py  ilo.py  imf_weo.py  noaa.py  povcalnet.py  pwt.py  usda.py  vdem.py  wdi.py
app/estimation/: __init__.py  bounds.py  causal_forest.py  did.py  double_ml.py  iv.py  ols.py  panel_fe.py  randomization_inference.py  rdd.py  (+4 more)
tests/: conftest.py
web/: package-lock.json  package.json
(+1636 files in other folders)
