[project]
name = "equilibria"
version = "0.1.0"
description = "Applied economics analysis platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "aiosqlite>=0.20",
    "pydantic-settings>=2.7",
    "httpx>=0.28",
    "numpy>=2.0",
    "scipy>=1.14",
    "statsmodels>=0.14",
    "scikit-learn>=1.6",
    "plotly>=6.0",
    "anthropic>=0.42",
    "fredapi>=0.5",
    "pandas>=2.2",
    "arch>=7.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.9",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
